<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/add_name_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="Name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="TOPPINGS"
            android:id="@+id/toppings_text_view"
            android:textSize="16sp"/>

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Whipped cream"
            android:paddingLeft="24dp"
            android:textSize="16sp"
            android:onClick="onCheckboxClicked"/>

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Chocolate"
            android:paddingLeft="24dp"
            android:textSize="16sp"
            android:onClick="hasChocolate"/>

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="QUANTITY"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decrease_quantity_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:enabled="false"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_count_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="1"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/increase_quantity_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="+" />


        </LinearLayout>


        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/decrease_quantity_button"
            android:padding="8dp"
            android:text="ORDER SUMMARY"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/price_count_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_summary_text_view"
            android:padding="4dp"
            android:text="$0"
            android:textSize="16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price_count_text_view"
            android:onClick="submitOrder"
            android:padding="8dp"
            android:text="ORDER" />


    </LinearLayout>
</ScrollView>